--- a/springboot/src/main/resources/templates/addrbook_edit_form.html
+++ b/springboot/src/main/resources/templates/addrbook_edit_form.html
@@ -29,9 +29,9 @@
 <div align="center">
 <H2>주소록:수정화면 </H2>
 <HR>
-[<a href="list.do">주소록 목록으로</a>] <p>
+[<a href="addrbook_list.do">주소록 목록으로</a>] <p>
 <form name=form1 method=post action=update.do>
-<input type=hidden name="abId" value="${ab.abId}">
+<input type=hidden name="abId" th:value="${ab.abId}">
 <input type=hidden name="action" value="update">
 
 <table border="1">
